# hawkapi-websockets

./: CHANGELOG.md  README.md  pyproject.toml
src/hawkapi_websockets/: __init__.py  _heartbeat.py  _manager.py  _plugin.py  _pubsub.py
tests/: conftest.py  test_heartbeat.py  test_manager.py  test_plugin.py  test_pubsub.py
